--- a/leetcode/2. Add Two Numbers.md
+++ b/leetcode/2. Add Two Numbers.md
@@ -25,24 +25,53 @@ Explanation: 342 + 465 = 807.
  * @param {ListNode} l2
  * @return {ListNode}
  */
+function createLinkedList(arr) {
+    if (arr.length < 1) {
+        return null;
+    }
+    //arr.reverse();
+    console.log(arr[0]);
+    var head = new ListNode(arr[0]);
+    var current = head;
+    for (var i = 1; i < arr.length; i++) {
+        var nextNode = new ListNode(arr[i]);
+        current.next = nextNode;
+        // move current to the new node we just created
+        current = nextNode;
+    }
+    return head
+}
+
 var addTwoNumbers = function(l1, l2) {
-    getNum = (ll)=>{
+    getNum = (ll) => {
         var num = '';
         while (ll.next != null){
             num = ll.val + num;
+            ll = ll.next;
         }
-        return int(num);
+        num = ll.val + num;
+        return parseInt(num);
     }
     var sum = getNum(l1) + getNum(l2);
+    console.log('sum: ' + sum);
     var digits = [];
+    if (sum == 0){
+        digits[digits.length] = 0;
+    }
     while (sum > 0){
         digits[digits.length] = sum % 10;
         sum = parseInt(sum / 10);
     }
-    function buildLList(){
-        // TODO
-    }
+    console.log('digits: ' + digits);
+    return createLinkedList(digits);
 };
-
+/**
+ * NOTE: Doesnt work for test cases with scientific notation
+ * [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
+ * [5,6,4]
+ * 
+ * [2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,9]
+ * [5,6,4,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,9,9,9,9]
+ */
 ```
 
