reverse sum linklist

--- a/leetcode/2. Add Two Numbers.md
+++ b/leetcode/2. Add Two Numbers.md
@@ -66,7 +66,7 @@ var addTwoNumbers = function(l1, l2) {
     return createLinkedList(digits);
 };
 /**
- * NOTE: Doesnt work for test cases with scientific notation
+ * NOTE: Doesnt work for test cases resulting in scientific notation
  * [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
  * [5,6,4]
  * 
@@ -74,4 +74,45 @@ var addTwoNumbers = function(l1, l2) {
  * [5,6,4,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,2,4,3,9,9,9,9]
  */
 ```
+
+**Solution 2**
+```javascript
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode} l1
+ * @param {ListNode} l2
+ * @return {ListNode}
+ */
+var addTwoNumbers = function(l1, l2) {
+    // store head node separately
+    var slHead = new ListNode();
+    var sl = slHead;
+    var sum = 0;
+    // if there is a leading zero in a reverse number list it means it is the end
+    while (l1 != null || l2 != null || sum != 0){
+        sum = (l1 == null ? 0 : l1.val) 
+            + (l2 == null ? 0 : l2.val) 
+            + sum;
+        
+        // if double digit, link the latter number first since it is reverse order
+        sl.next = new ListNode(sum % 10);
+        console.log(sl.val);
+        sl = sl.next;
+        
+        // if double digit, carry over
+        sum = parseInt(sum / 10);
+        if (l1 != null) { l1 = l1.next};
+        if (l2 != null) { l2 = l2.next};
+        
+    }
+    // next of null node is head of sum list
+    return slHead.next;
+};
+````
 
