--- a/leetcode/2. Add Two Numbers.md
+++ b/leetcode/2. Add Two Numbers.md
@@ -66,7 +66,7 @@ var addTwoNumbers = function(l1, l2) {
     return createLinkedList(digits);
 };
 /**
- * NOTE: Doesnt work for test cases resulting in scientific notation
+ * NOTE: Doesnt work for test cases yielding scientific notation
  * [1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]
  * [5,6,4]
  * 
