marshall, unmarshall BT

--- a/leetcode/1. Two Sum.md
+++ b/leetcode/1. Two Sum.md
@@ -58,17 +58,40 @@ var twoSum = function(nums, target) {
     return [];
 };
 ```
+
 **Solution 3:**
 ```javascript
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
 var twoSum = function(nums, target) {
-	if (nums.length <=1 ){
-		return [];
-	}
+    if (nums.length <= 1){
+        return [];
+    }
+    return twoSumBT(nums, target, nums.length-1);
+};
 
-	return twoSumBT(nums,target,[]);
-}
+function twoSumBT(nums, target, length) {
+    // if the end is reached and no solution, return no indices
+    if (length == 0 && target != 0){
+        return [];
+    }
 
-var twoSumBT = function(nums, target, current){
-	# TODO
+    // if solution is reached, return indices
+    if (target == 0){
+        return indices;
+    }
+
+    // if current element is larger than target, exclude and continue
+    if (nums[length] > target){
+        twoSumBT(nums, target, length-1);
+    }
+
+    // TODO push and pop indices (max 2)
+
+    // continue by including the current element or excluding the current element
+    return twoSumBT(nums, target - nums[length], length - 1) || twoSumBT(nums, target, length - 1)
 }
 ```
