--- a/leetcode/1. Two Sum.md
+++ b/leetcode/1. Two Sum.md
@@ -46,8 +46,8 @@ var twoSum = function(nums, target) {
         return [];
     }
     nums.sort(function(a, b){return a - b});
-    l = 0;
-    r = nums.length - 1;
+    var l = 0;
+    var r = nums.length - 1;
     while (l < r){
         if ((nums[l] + nums[r]) > target){
             r -= 1;
@@ -59,41 +59,4 @@ var twoSum = function(nums, target) {
     }
     return [];
 };
-```
-
-**Solution 3:**
-```javascript
-/**
- * @param {number[]} nums
- * @param {number} target
- * @return {number[]}
- */
-var twoSum = function(nums, target) {
-    if (nums.length <= 1){
-        return [];
-    }
-    return twoSumBT(nums, target, nums.length-1);
-};
-
-function twoSumBT(nums, target, length) {
-    // if the end is reached and no solution, return no indices
-    if (length == 0 && target != 0){
-        return [];
-    }
-
-    // if solution is reached, return indices
-    if (target == 0){
-        return indices;
-    }
-
-    // if current element is larger than target, exclude and continue
-    if (nums[length] > target){
-        twoSumBT(nums, target, length-1);
-    }
-
-    // TODO push and pop indices (max 2)
-
-    // continue by including the current element or excluding the current element
-    return twoSumBT(nums, target - nums[length], length - 1) || twoSumBT(nums, target, length - 1)
-}
 ```
