--- a/leetcode/204. Count Primes.md
+++ b/leetcode/204. Count Primes.md
@@ -1,8 +1,6 @@
-# Add Two Numbers
+# 204. Count Primes
 
-You are given two **non-empty** linked lists representing two non-negative integers. The digits are stored in **reverse order** and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.
-
-You may assume the two numbers do not contain any leading zero, except the number 0 itself.
+Count the number of prime numbers less than a non-negative number, n.
 
 **Example 1:**
 ```
