--- a/leetcode/204. Count Primes.md
+++ b/leetcode/204. Count Primes.md
@@ -40,6 +40,8 @@ def count_primes(n)
     end
     numbers.filter{|num| num == true}.count
 end
+# NOTE: Time limit exceeded
+# Last executed input: 5000000
 ```
 **Solution 2:**
 ```ruby
